Clean up BrokerRequestHandler and BrokerResponse