@@ -20,7 +20,6 @@ package org.apache.pinot.queries;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,6 +29,7 @@ import java.util.concurrent.TimeoutException;
 import javax.annotation.Nullable;
 import org.apache.pinot.common.datatable.DataTable;
 import org.apache.pinot.common.datatable.DataTableFactory;
+import org.apache.pinot.common.metrics.BrokerMetrics;
 import org.apache.pinot.common.request.BrokerRequest;
 import org.apache.pinot.common.request.PinotQuery;
 import org.apache.pinot.common.response.broker.BrokerResponseNative;
@@ -58,11 +58,13 @@ import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.env.PinotConfiguration;
-import org.apache.pinot.spi.utils.CommonConstants;
+import org.apache.pinot.spi.utils.CommonConstants.Broker;
 import org.apache.pinot.spi.utils.CommonConstants.Server;
 import org.apache.pinot.spi.utils.ReadMode;
 import org.apache.pinot.sql.parsers.CalciteSqlCompiler;
 import org.apache.pinot.sql.parsers.CalciteSqlParser;
+
+import static org.mockito.Mockito.mock;
 
 
 /**
@@ -71,8 +73,8 @@ import org.apache.pinot.sql.parsers.CalciteSqlParser;
 public abstract class BaseQueriesTest {
   protected static final PlanMaker PLAN_MAKER = new InstancePlanMakerImplV2();
   protected static final QueryOptimizer OPTIMIZER = new QueryOptimizer();
-
   protected static final ExecutorService EXECUTOR_SERVICE = Executors.newFixedThreadPool(2);
+  protected static final BrokerMetrics BROKER_METRICS = mock(BrokerMetrics.class);
 
   protected abstract String getFilter();
 
@@ -81,7 +83,7 @@ public abstract class BaseQueriesTest {
   protected abstract List<IndexSegment> getIndexSegments();
 
   protected List<List<IndexSegment>> getDistinctInstances() {
-    return Collections.singletonList(getIndexSegments());
+    return List.of(getIndexSegments());
   }
 
   /**
@@ -219,9 +221,6 @@ public abstract class BaseQueriesTest {
     }
 
     // Broker side
-    // Use 2 Threads for 2 data-tables
-    BrokerReduceService brokerReduceService = new BrokerReduceService(new PinotConfiguration(
-        Collections.singletonMap(CommonConstants.Broker.CONFIG_OF_MAX_REDUCE_THREADS_PER_QUERY, 2)));
     Map<ServerRoutingInstance, DataTable> dataTableMap = new HashMap<>();
     try {
       // For multi-threaded BrokerReduceService, we cannot reuse the same data-table
@@ -236,18 +235,24 @@ public abstract class BaseQueriesTest {
     BrokerRequest brokerRequest = CalciteSqlCompiler.convertToBrokerRequest(pinotQuery);
     BrokerRequest serverBrokerRequest =
         serverPinotQuery == pinotQuery ? brokerRequest : CalciteSqlCompiler.convertToBrokerRequest(serverPinotQuery);
-    BrokerResponseNative brokerResponse =
-        brokerReduceService.reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap,
-            CommonConstants.Broker.DEFAULT_BROKER_TIMEOUT_MS, null);
-    brokerReduceService.shutDown();
-
-    return brokerResponse;
+    return reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap);
   }
 
   private static List<SegmentContext> getSegmentContexts(List<IndexSegment> indexSegments) {
     List<SegmentContext> segmentContexts = new ArrayList<>(indexSegments.size());
     indexSegments.forEach(s -> segmentContexts.add(new SegmentContext(s)));
     return segmentContexts;
+  }
+
+  protected BrokerResponseNative reduceOnDataTable(BrokerRequest brokerRequest, BrokerRequest serverBrokerRequest,
+      Map<ServerRoutingInstance, DataTable> dataTableMap) {
+    BrokerReduceService brokerReduceService =
+        new BrokerReduceService(new PinotConfiguration(Map.of(Broker.CONFIG_OF_MAX_REDUCE_THREADS_PER_QUERY, 2)));
+    BrokerResponseNative brokerResponse =
+        brokerReduceService.reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap,
+            Broker.DEFAULT_BROKER_TIMEOUT_MS, BROKER_METRICS);
+    brokerReduceService.shutDown();
+    return brokerResponse;
   }
 
   /**
@@ -327,9 +332,6 @@ public abstract class BaseQueriesTest {
     }
 
     // Broker side
-    // Use 2 Threads for 2 data-tables
-    BrokerReduceService brokerReduceService = new BrokerReduceService(new PinotConfiguration(
-        Collections.singletonMap(CommonConstants.Broker.CONFIG_OF_MAX_REDUCE_THREADS_PER_QUERY, 2)));
     Map<ServerRoutingInstance, DataTable> dataTableMap = new HashMap<>();
     try {
       // For multi-threaded BrokerReduceService, we cannot reuse the same data-table
@@ -345,10 +347,6 @@ public abstract class BaseQueriesTest {
     BrokerRequest brokerRequest = CalciteSqlCompiler.convertToBrokerRequest(pinotQuery);
     BrokerRequest serverBrokerRequest =
         serverPinotQuery == pinotQuery ? brokerRequest : CalciteSqlCompiler.convertToBrokerRequest(serverPinotQuery);
-    BrokerResponseNative brokerResponse =
-        brokerReduceService.reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap,
-            CommonConstants.Broker.DEFAULT_BROKER_TIMEOUT_MS, null);
-    brokerReduceService.shutDown();
-    return brokerResponse;
+    return reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap);
   }
 }
